--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="file:///C:/Users/Asus/OneDrive/Documents/WT_lab/portfolio/icon.ico" />
+  <link rel="icon" href="icon.ico" />
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -24,7 +24,7 @@
   
   <section class="home">
     <div class="home-img">
-      <img src="file:///C:/Users/Asus/OneDrive/Documents/Me.jpg " alt="Your image">
+      <img src="Me.jpg " alt="Your image">
     </div>
     <div class="home-content">
       <h1>Hi, It's <span>Murali Krishna.</span></h1>
@@ -39,7 +39,7 @@
       <a href="#" class="btn" id="hiremeBtn">Hire Me</a>
  
     <div id="resumesection" class="hidden">
-      <iframe src="file:///C:/Users/Asus/OneDrive/Documents/Resume.pdf" width="100%" height="500px"></iframe>
+      <iframe src="Resume.pdf" width="100%" height="500px"></iframe>
       <a href="#" class="btn" id="showContactBtn">I'm Satisfied</a>
             <a href="#" class="btn" id="notSatisfiedBtn">I'm Not Satisfied</a>
     </div>
